--- a/ImeiValidator.WebApplication/Views/Shared/_Layout.cshtml
+++ b/ImeiValidator.WebApplication/Views/Shared/_Layout.cshtml
@@ -9,12 +9,39 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
+    <div id="fb-root"></div>
+    <script>
+        (function(d, s, id) {
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) return;
+            js = d.createElement(s); js.id = id;
+            js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.3&appId=1431410790497947";
+            fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));
+    </script>
     <div class="container body-content">
         @RenderBody()
         @RenderSection("SPAViews", required: false)
         <hr />
         <footer>
-            <p>&copy; IMEI Перевірка, @DateTime.Now.Year</p>
+            
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6 footer-left">
+                        <p>
+                            <div class="fb-like" data-href="https://www.facebook.com/imei.validation" data-width="450" data-layout="button_count" data-action="like" data-show-faces="true" data-share="false"></div>
+                        </p>
+                    </div>
+                    <div class="col-md-6 footer-right">
+                    </div>
+                </div>
+                <hr>
+                <div class="row">
+                    <div class="col-lg-12 footer-below">
+                        <p>&copy; IMEI Перевірка, @DateTime.Now.Year</p>
+                    </div>
+                </div>
+            </div>
         </footer>
     </div>
 
