--- a/ImeiValidator.WebApplication/Views/Shared/_Layout.cshtml
+++ b/ImeiValidator.WebApplication/Views/Shared/_Layout.cshtml
@@ -5,7 +5,8 @@
     <title>@ViewBag.Title - IMEI Перевірка</title>
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    @Styles.Render("~/Content/css")
+    @Styles.Render("~/Content/cssStyles")
+    @Styles.Render("~/Content/fontawesome")
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
