Added link to source code on github.

--- a/ImeiValidator.WebApplication/Views/Shared/_Layout.cshtml
+++ b/ImeiValidator.WebApplication/Views/Shared/_Layout.cshtml
@@ -25,7 +25,6 @@
         @RenderSection("SPAViews", required: false)
         <hr />
         <footer>
-            
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 footer-left">
@@ -34,6 +33,7 @@
                         </p>
                     </div>
                     <div class="col-md-6 footer-right">
+                        <a href="https://github.com/TerraVenil/ImeiValidator" class="btn btn-default"><i class="fa fa-github"></i> View Source on GitHub</a>
                     </div>
                 </div>
                 <hr>
