--- a/ImeiValidator.WebApplication/Views/Shared/_Layout.cshtml
+++ b/ImeiValidator.WebApplication/Views/Shared/_Layout.cshtml
@@ -8,6 +8,10 @@
     @Styles.Render("~/Content/cssStyles")
     @Styles.Render("~/Content/fontawesome")
     @Scripts.Render("~/bundles/modernizr")
+    <script type="text/javascript" src="//vk.com/js/api/openapi.js?116"></script>
+    <script type="text/javascript">
+        VK.init({ apiId: 4926384, onlyWidgets: true });
+    </script>
 </head>
 <body>
     <div id="fb-root"></div>
@@ -30,6 +34,12 @@
                     <div class="col-md-6 footer-left">
                         <p>
                             <div class="fb-like" data-href="https://www.facebook.com/imei.validation" data-width="450" data-layout="button_count" data-action="like" data-show-faces="true" data-share="false"></div>
+                        </p>
+                        <p>
+                            <div id="vk_like"></div>
+                            <script type="text/javascript">
+                                VK.Widgets.Like("vk_like", { type: "mini" });
+                            </script>
                         </p>
                     </div>
                     <div class="col-md-6 footer-right">
