--- a/ImeiValidator.WebApplication/Views/Shared/_Layout.cshtml
+++ b/ImeiValidator.WebApplication/Views/Shared/_Layout.cshtml
@@ -24,6 +24,24 @@
             fjs.parentNode.insertBefore(js, fjs);
         }(document, 'script', 'facebook-jssdk'));
     </script>
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container">
+            <div class="collapse navbar-collapse">
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+                            <input type="hidden" name="cmd" value="_s-xclick">
+                            <input type="hidden" name="hosted_button_id" value="LKVHYVNDPYE3E">
+                            <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                            <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                        </form>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container-fluid -->
+    </nav>
     <div class="container body-content">
         @RenderBody()
         @RenderSection("SPAViews", required: false)
@@ -46,7 +64,6 @@
                         <a href="https://github.com/TerraVenil/ImeiValidator" class="btn btn-default"><i class="fa fa-github"></i> View Source on GitHub</a>
                     </div>
                 </div>
-                <hr>
                 <div class="row">
                     <div class="col-lg-12 footer-below">
                         <p>&copy; IMEI Перевірка, @DateTime.Now.Year</p>
