--- a/ImeiValidator.WebApplication/Content/Site.css
+++ b/ImeiValidator.WebApplication/Content/Site.css
@@ -132,3 +132,28 @@ p {
     font-size: 20px;
     text-align: center;
 }
+
+/* Feedback */
+
+.hero-unit {
+    padding:60px;
+    margin-bottom:30px;
+    font-size:18px;
+    font-weight:200;
+    line-height:30px;
+    color:inherit;
+    background-color:#eeeeee;
+    -webkit-border-radius:6px;
+    -moz-border-radius:6px;
+    border-radius:6px;
+}
+.hero-unit h1 {
+    margin-bottom:0;
+    font-size:60px;
+    line-height:1;
+    color:inherit;
+    letter-spacing:-1px;
+}
+.hero-unit li {
+    line-height:30px;
+}
