--- a/ImeiValidator.WebApplication/Views/Shared/_Layout.cshtml
+++ b/ImeiValidator.WebApplication/Views/Shared/_Layout.cshtml
@@ -61,7 +61,7 @@
                         </p>
                     </div>
                     <div class="col-md-6 footer-right">
-                        <a href="https://github.com/TerraVenil/ImeiValidator" class="btn btn-default"><i class="fa fa-github"></i> View Source on GitHub</a>
+                        <a href="https://github.com/TerraVenil/ImeiValidator" class="btn btn-default"><i class="fa fa-github"></i> Переглянути джерело на GitHub</a>
                     </div>
                 </div>
                 <div class="row">
