Fix bug with sending message through sendgrid using web api.

--- a/ImeiValidator.WebApplication/Views/Shared/_Layout.cshtml
+++ b/ImeiValidator.WebApplication/Views/Shared/_Layout.cshtml
@@ -89,13 +89,13 @@
                 message_placeholder: "Продовжуйте набирати своє повідомлення тут...",
                 feedback_url: "https://api.sendgrid.com/api/mail.send.json",
                 custom_params: {
-                    feedback_type: "bootstarp",
-                    api_user: "kosunix",
-                    api_key: "qUEKsgcB0DGtbC3NaJJm",
+                    api_user: "azure_fa94a0b6e4768933ec089a013be0f44f",
+                    api_key: "wWdg9KR8kfjx9Eb",
                     to: "kosunix@gmail.com",
                     toname: "Oleksii",
                     subject: "Відгук"
                 },
+                delayed_close: false,
                 delayed_options: {
                     success_color: "#5cb85c",
                     fail_color: "#d2322d",
