Hot fix username.

--- a/ImeiValidator.WebApplication/Views/Shared/_Layout.cshtml
+++ b/ImeiValidator.WebApplication/Views/Shared/_Layout.cshtml
@@ -89,7 +89,7 @@
                 message_placeholder: "Продовжуйте набирати своє повідомлення тут...",
                 feedback_url: "https://api.sendgrid.com/api/mail.send.json",
                 custom_params: {
-                    api_user: "azure_fa94a0b6e4768933ec089a013be0f44f",
+                    api_user: "azure_fa94a0b6e4768933ec089a013be0f44f@azure.com",
                     api_key: "wWdg9KR8kfjx9Eb",
                     to: "kosunix@gmail.com",
                     toname: "Oleksii",
