Added LiqPay button.

--- a/ImeiValidator.WebApplication/Views/Shared/_Layout.cshtml
+++ b/ImeiValidator.WebApplication/Views/Shared/_Layout.cshtml
@@ -28,6 +28,13 @@
                             <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
                         </form>
                     </li>
+                    <li>
+                        <form method="POST" accept-charset="utf-8" action="https://www.liqpay.com/api/checkout">
+                            <input type="hidden" name="data" value="eyJ2ZXJzaW9uIjozLCJwdWJsaWNfa2V5IjoiaTk1NDEyNjc1NzczIiwiYW1vdW50IjoiNSIsImN1cnJlbmN5IjoiVUFIIiwiZGVzY3JpcHRpb24iOiJJTUVJIENoZWNrZXIiLCJ0eXBlIjoiZG9uYXRlIiwibGFuZ3VhZ2UiOiJydSIsInBheV93YXkiOiJjYXJkLGxpcXBheSxwcml2YXQyNCJ9" />
+                            <input type="hidden" name="signature" value="fCqTs9kllalxV15Em4HxL0UPL7s=" />
+                            <input type="image" src="~/assets/img/d1ua.radius.png" name="btn_text" />
+                        </form>
+                    </li>
                 </ul>
             </div>
         </div>
